# aegis-sdk

./: .gitignore  README.md  frontend.txt
aegis/: .gitignore  SETUP.md  demo.py  pyproject.toml  requirements.txt  testPrompts
aegis/demotools/: main.py  provider.py  tools.py
aegis/docs/: SESSION.md  agentprompt  masterprompt  resume_prompt
backend/: generate_key.py  pyproject.toml  requirements.txt  verify_endpoints.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/middleware/: request_id.py  sdk_auth_middleware.py
backend/app/routers/: analytics.py  api_keys.py  auth.py  executions.py  logs.py  policies.py  projects.py  risk.py  sdk.py  sessions.py  websocket.py  workspaces.py
backend/app/services/: api_key_service.py  auth_service.py  execution_service.py  sdk_auth_service.py  simulation_service.py
backend/app/utils/: seed.py  seeder.py
frontend/: README.md  metadata.json  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/api/projects/: route.ts
frontend/app/api/requests/: route.ts
frontend/components/: architecture-flow.tsx  footer.tsx  navbar.tsx  providers.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  db.ts
(+10 files in other folders)
