[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.0.0",
    "fastapi>=0.110.0",
    "motor>=3.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.8.0",
    "pymongo>=4.6.2",
    "slowapi>=0.1.10",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
]
